--- a/CashRegister2/CashRegister2.csproj
+++ b/CashRegister2/CashRegister2.csproj
@@ -33,7 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -82,6 +84,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\printSound.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Julie-Henriksen-Kitchen-Rotating-Stand-Mixer.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
